--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@
 # limitations under the License.
 #
 # SPDX-License-Identifier: Apache-2.0
+# WA! Sans! Papyrus!
 
 cmake_minimum_required(VERSION 2.8.7)
 project(luna-service2)
